Bug 88484 - Sample text in font name combobox doesn't display
Summary: Sample text in font name combobox doesn't display
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.3.5.2 release
Hardware: Other All
: medium normal
Assignee: خالد حسني
URL:
Whiteboard: target:7.6.0 target:7.5.0.2 target:7.4.6
Keywords:
Depends on:
Blocks: Fonts-Name-Combobox
  Show dependency treegraph
 
Reported: 2015-01-16 07:56 UTC by Chris Sherlock
Modified: 2023-01-24 10:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example of missing text (210.57 KB, image/png)
2015-01-16 07:56 UTC, Chris Sherlock
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Sherlock 2015-01-16 07:56:37 UTC
Created attachment 112329 [details]
Example of missing text

I've noticed that the font combobox we use in Writer, Calc, etc is not always showing the sample characters. As an example, Abyssinica SIL on Linux is not displaying the corresponding Ethiopic sample text next to it.
Comment 1 Xisco Faulí 2016-09-10 15:59:06 UTC
Hi Chris,
I'm setting this ticket back to NEW as it has been inactive for more than 3
months.
Feel free to assign it back to you if you're still working on this.
Regards
Comment 2 Xisco Faulí 2016-09-10 15:59:48 UTC Comment hidden (obsolete)
Comment 3 Xisco Faulí 2017-09-29 08:48:14 UTC Comment hidden (noise)
Comment 4 QA Administrators 2020-09-27 03:57:35 UTC Comment hidden (noise)
Comment 5 QA Administrators 2022-09-28 03:32:59 UTC Comment hidden (noise)
Comment 6 Rajasekaran Karunanithi 2022-12-17 23:48:41 UTC
Still presents in LO 7.5 Dev under Windows 10(x64).

Version: 7.5.0.0.alpha1 (X86_64) / LibreOffice Community
Build ID: 2b4d136b65bc79a1248876160e85fab79d52d5d6
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2022-12-25 23:15:47 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/18b39c8c9b35528c8fb172339126b613827d09aa

tdf#88484: Show sample text for Abyssinica SIL font

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-12-26 09:30:28 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/ced8585bcb92aa58ca3e24197ff38fb82cc8a703

tdf#88484: Show sample text for Abyssinica SIL font

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-12-26 17:45:17 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/610880abd9f3be00451db51f05b7f4772c389b7a

tdf#88484: Show sample text for Abyssinica SIL font

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2023-01-24 10:36:25 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard