svtools: fixed fdo#88484 - FontNameBox not showing sample text

Change-Id: I9dde964bb2abe84f6e55c516d8846e04cc18aa21